{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 20,
  "lineage": "aa772081-f496-57b6-be5c-bc04ac68e4aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:310682748446:route-table/rtb-022ecadb52b5ff622",
            "id": "rtb-022ecadb52b5ff622",
            "owner_id": "310682748446",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "spring-cloud-function-demo-private-rt"
            },
            "tags_all": {
              "Name": "spring-cloud-function-demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d78e81d8d7a50f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f9eb14ee908683d",
            "route_table_id": "rtb-022ecadb52b5ff622",
            "subnet_id": "subnet-09635175c586a62ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008c6ed6fe4e43a36",
            "route_table_id": "rtb-022ecadb52b5ff622",
            "subnet_id": "subnet-01074c5d4b8681b72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:310682748446:security-group/sg-0a74640267937a7ec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f28e40e3a2bb61aa"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0a74640267937a7ec",
            "ingress": [],
            "name": "spring-cloud-function-demo-lambda-20250905011053964000000006",
            "name_prefix": "spring-cloud-function-demo-lambda-",
            "owner_id": "310682748446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "spring-cloud-function-demo-lambda-sg"
            },
            "tags_all": {
              "Name": "spring-cloud-function-demo-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d78e81d8d7a50f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:310682748446:security-group/sg-0f28e40e3a2bb61aa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0f28e40e3a2bb61aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "spring-cloud-function-demo-vpce-20250905011051161700000003",
            "name_prefix": "spring-cloud-function-demo-vpce-",
            "owner_id": "310682748446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "spring-cloud-function-demo-vpce-sg"
            },
            "tags_all": {
              "Name": "spring-cloud-function-demo-vpce-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d78e81d8d7a50f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:310682748446:subnet/subnet-09635175c586a62ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09635175c586a62ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "310682748446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "spring-cloud-function-demo-private-subnet-1"
            },
            "tags_all": {
              "Name": "spring-cloud-function-demo-private-subnet-1"
            },
            "vpc_id": "vpc-044d78e81d8d7a50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:310682748446:subnet/subnet-01074c5d4b8681b72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01074c5d4b8681b72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "310682748446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "spring-cloud-function-demo-private-subnet-2"
            },
            "tags_all": {
              "Name": "spring-cloud-function-demo-private-subnet-2"
            },
            "vpc_id": "vpc-044d78e81d8d7a50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:310682748446:vpc/vpc-044d78e81d8d7a50f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025271e32aed8c8c4",
            "default_route_table_id": "rtb-030d69f4f85d3ffba",
            "default_security_group_id": "sg-01a9429f7a48f6617",
            "dhcp_options_id": "dopt-08200114066a3d51c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044d78e81d8d7a50f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030d69f4f85d3ffba",
            "owner_id": "310682748446",
            "tags": {
              "Name": "spring-cloud-function-demo-vpc"
            },
            "tags_all": {
              "Name": "spring-cloud-function-demo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:310682748446:vpc-endpoint/vpce-048bd39f64ace340e",
            "dns_entry": [
              {
                "dns_name": "vpce-048bd39f64ace340e-7zmm3pje.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-048bd39f64ace340e-7zmm3pje-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-048bd39f64ace340e-7zmm3pje-ap-northeast-1c.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "api.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z06796629P4GYU85LIHA"
              },
              {
                "dns_name": "ecr.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z08701751GBAEZFX1LHNH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-048bd39f64ace340e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-058bac500e21709c3",
              "eni-0e142f1c628456893"
            ],
            "owner_id": "310682748446",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f28e40e3a2bb61aa"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.100",
                "subnet_id": "subnet-09635175c586a62ce"
              },
              {
                "ipv4": "10.0.11.135",
                "subnet_id": "subnet-01074c5d4b8681b72"
              }
            ],
            "subnet_ids": [
              "subnet-01074c5d4b8681b72",
              "subnet-09635175c586a62ce"
            ],
            "tags": {
              "Name": "spring-cloud-function-demo-ecr-api-endpoint"
            },
            "tags_all": {
              "Name": "spring-cloud-function-demo-ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-044d78e81d8d7a50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:310682748446:vpc-endpoint/vpce-07570a8921e4fb2d6",
            "dns_entry": [
              {
                "dns_name": "vpce-07570a8921e4fb2d6-sq78eii0.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-07570a8921e4fb2d6-sq78eii0-ap-northeast-1c.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-07570a8921e4fb2d6-sq78eii0-ap-northeast-1a.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01852493FJ2I2G6Z722J"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01852493FJ2I2G6Z722J"
              },
              {
                "dns_name": "dkr-ecr.ap-northeast-1.on.aws",
                "hosted_zone_id": "Z06780802WTSRWACUWP6E"
              },
              {
                "dns_name": "*.dkr-ecr.ap-northeast-1.on.aws",
                "hosted_zone_id": "Z06780802WTSRWACUWP6E"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07570a8921e4fb2d6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-023befc11e5320c1a",
              "eni-0a12c8d9784577a54"
            ],
            "owner_id": "310682748446",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f28e40e3a2bb61aa"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.dkr",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.82",
                "subnet_id": "subnet-09635175c586a62ce"
              },
              {
                "ipv4": "10.0.11.108",
                "subnet_id": "subnet-01074c5d4b8681b72"
              }
            ],
            "subnet_ids": [
              "subnet-01074c5d4b8681b72",
              "subnet-09635175c586a62ce"
            ],
            "tags": {
              "Name": "spring-cloud-function-demo-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Name": "spring-cloud-function-demo-ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-044d78e81d8d7a50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:310682748446:vpc-endpoint/vpce-017d532be729754c1",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.20.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-017d532be729754c1",
            "owner_id": "310682748446",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-022ecadb52b5ff622"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "spring-cloud-function-demo-s3-endpoint"
            },
            "tags_all": {
              "Name": "spring-cloud-function-demo-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-044d78e81d8d7a50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}